--- a/practice.html
+++ b/practice.html
@@ -77,7 +77,7 @@
         }
 
         #hotel-facility {
-            background: url("https://picsum.photos/1080/1080/?random=1"),
+            background: url("https://picsum.photos/1920/1080/?random=1"),
                 radial-gradient(circle, #777 30%, #ccc 70%),
                 linear-gradient(to right, #999, #444);
             background-blend-mode: multiply, screen;
@@ -441,6 +441,7 @@
             </div>
         </article>
     </section>
+
     <section id="hotel-facility" class="py-5 text-white">
         <header class="container text-center">
             <h2 class="pb-3">服務設施</h2>
@@ -625,11 +626,11 @@
         </article>
     </section>
 
-    <section id="hotel-contact" class="py-5 bg-dark text-white container">
+    <section id="hotel-contact" class="py-5 bg-dark text-white">
         <header class="text-center">
             <h2 class="text-info pb-3">聯絡我們</h2>
         </header>
-        <article class="py-5">
+        <article class="py-5 container">
             <form action="post" class="row">
                 <div class="form-group col-12 col-md-6">
                     <label for="cid_name">訪客姓名</label>
